--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,20 @@
 spring:
+  datasource:
+    username: root
+    url: jdbc:mariadb://localhost:3306/damda?useUnicode=true&characterEncoding=utf8&serverTimeZone=Asia/Seoul
+    driverClassName: org.mariadb.jdbc.Driver
+    password: '1234'
+
+  jpa:
+    properties:
+      hibernate:
+        format_sql: 'true'
+        show_sql: 'true'
+    hibernate:
+      ddl-auto: update
   profiles:
     include: db
+server:
+  port: '8087'
+
+
