--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
     password:  # H2 접속 시 입력할 password 정보 (원하는 것으로 입력)test
   jpa:
       hibernate:
-        ddl-auto: create
+        ddl-auto: update
