email 보내기 세팅, 테스트 완료

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
 	/* thymeleaf dependency */
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+	/* mail dependency */
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
