--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
 	/* websocket dependency */
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	/* json dependency */
+	implementation group: 'org.json', name: 'json', version: '20220320'
 }
 
 tasks.named('test') {
