--- a/src/main/resources/application-user.yml
+++ b/src/main/resources/application-user.yml
@@ -8,7 +8,7 @@ spring:
             scope: profile_nickname, account_email
             client-name: Kakao
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: https://wogus.net:443/login/oauth2/code/kakao
             client-authentication-method: POST
         provider:
           kakao:
