--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mariadb://172.17.0.1:3306/damda?useUnicode=true&characterEncoding=utf8&serverTimeZone=Asia/Seoul
+    url: jdbc:mariadb://localhost:3306/damda?useUnicode=true&characterEncoding=utf8&serverTimeZone=Asia/Seoul
     driverClassName: org.mariadb.jdbc.Driver
-    username: jealocal
-    password: '1234'
+    username: root
+    password: ''
   jpa:
     properties:
       hibernate:
