--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -11,7 +11,7 @@ spring:
         use_sql_comments: 'true'
         show_sql: 'true'
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
   mail:
     host: smtp.gmail.com
     port: 587
